precompiles/utils/macro/tests/precompile/compile-fail/discriminant/type-mismatch-2.stderr
error: All discriminants must have the same type (found u32 before)
  --> tests/precompile/compile-fail/discriminant/type-mismatch-2.rs:27:43
   |
27 |     fn discriminant(address: H160) -> Option<u64> {
   |                                              ^^^
